# sceneweaver

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  MANIFEST.in  README.md  pixi.toml  pyproject.toml  requirements.txt
.github/workflows/: lint-test.yml  publish-to-pypi.yml
docs/: specs.md  svg.md  templates.md
sceneweaver/: _version.py  app.py  cache.py  generator.py  loader.py  template.py  template_manager.py
sceneweaver/resources/templates/logo_and_text/: README.md  example.yaml  params.yaml  template.yaml
sceneweaver/resources/templates/pixi_title/: README.md  example.yaml  params.yaml  template.yaml
sceneweaver/resources/templates/simple_title/: README.md  example.yaml  template.yaml
sceneweaver/resources/templates/slide_sequence/: README.md  example.yaml  template.yaml
sceneweaver/resources/templates/title_and_subtitle/: README.md  params.yaml  template.yaml
sceneweaver/resources/templates/zoom_fade_sequence/: README.md  example.yaml  params.yaml  template.yaml
sceneweaver/spec/: video_settings.py  video_spec.py
sceneweaver/spec/annotation/: arrow_annotation.py  base_annotation.py  highlight_annotation.py  text_annotation.py
sceneweaver/spec/effect/: __init__.py  accel_decel_effect.py  base_effect.py  scroll_effect.py  slide_effect.py  zoom_effect.py
sceneweaver/spec/scene/: __init__.py  base_scene.py  color_scene.py  composite_scene.py  image_scene.py  svg_scene.py  svg_template_scene.py  template_scene.py  title_card_scene.py  video_images_scene.py  video_scene.py
scripts/: update_screenshots.py
tests/: conftest.py  test_spec_loading.py  test_template_expansion.py  testspec.yaml
tests/scene/: test_image_scene.py  test_template_scene.py  test_title_card_scene.py
