[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "sceneweaver/_version.py"

[project]
name = "sceneweaver"
dynamic = ["version"]
description = "A tool for creating videos from YAML specification files"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "SceneWeaver Team"}
]
keywords = ["video", "moviepy", "yaml", "editing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "moviepy>=2.2.1",
    "PyYAML>=6.0",
    "pathlib2>=2.3.6; python_version<'3.4'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/sceneweaver"
Repository = "https://github.com/yourusername/sceneweaver"
Issues = "https://github.com/yourusername/sceneweaver/issues"

[project.scripts]
sceneweaver = "sceneweaver.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sceneweaver*"]

[tool.black]
line-length = 79
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
