[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "sceneweaver/_version.py"

[project]
name = "sceneweaver"
dynamic = ["version"]
description = "A tool for creating videos from YAML specification files"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "SceneWeaver Team"}
]
keywords = ["video", "moviepy", "yaml", "editing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "moviepy>=2.0.0",
    "ruamel.yaml>=0.17",
    "platformdirs>=4.5.0,<5",
    "sounddevice",
    "noisereduce",
    "cairosvg",
    "jinja2"
]

[project.optional-dependencies]
# Dependencies for development (testing, linting, etc.)
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8",
    "pyflakes",
    "pyright",
    "ruff",
    "pre-commit"
]

[project.urls]
Homepage = "https://github.com/yourusername/sceneweaver"
Repository = "https://github.com/yourusername/sceneweaver"
Issues = "https://github.com/yourusername/sceneweaver/issues"

[project.scripts]
sceneweaver = "sceneweaver.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["sceneweaver*"]

[tool.black]
line-length = 79
target-version = ['py38']

[tool.ruff]
line-length = 79
